<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.dbflute.dftest</groupId>
	<artifactId>dbflute-test-dbms-sqlite</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>DBFlute Test as SQLite</name>
	<description>test project of DBMS SQLite, using Google Guice</description>
	<url>https://github.com/dbflute-test/dbflute-test-dbms-sqlite</url>
	<inceptionYear>2014</inceptionYear>

	<properties>
		<dbflute.version>1.1.9</dbflute.version>
		<sqlite.jdbc.version>3.8.11.2</sqlite.jdbc.version>
		<guice.version>3.0</guice.version>
		<utflute.version>0.8.9</utflute.version>
	</properties>

	<licenses> 
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>The DBFlute Project</name>
		<url>http://dbflute.org/</url>
	</organization>

	<developers>
		<developer>
			<id>jflute</id>
			<timezone>+9</timezone>
		</developer>
	</developers>

	<issueManagement>
		<system>Github</system>
		<url>https://github.com/dbflute-test/dbflute-test-active-hanger/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>DBFlute-users</name>
			<subscribe>https://groups.google.com/forum/#!forum/dbflute</subscribe>
			<unsubscribe>https://groups.google.com/forum/#!forum/dbflute</unsubscribe>
			<post>dbflute@googlegroups.com</post>
			<archive>https://groups.google.com/forum/#!forum/dbflute</archive>
		</mailingList>
	</mailingLists>

	<build>
		<defaultGoal>validate</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<configuration>
						<updateReleaseInfo>true</updateReleaseInfo>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<configuration>
						<locales>en,ja</locales>
						<inputEncoding>UTF-8</inputEncoding>
						<outputEncoding>UTF-8</outputEncoding>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>source-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
					<execution>
						<phase>site</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.dbflute</groupId>
				<artifactId>dbflute-maven-plugin</artifactId>
				<version>1.1.0-RC1</version>
				<configuration>
					<clientProject>maihamadb</clientProject>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>sonatype-oss-public</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>maven.seasar.org</id>
			<name>The Seasar Foundation Maven2 Repository</name>
			<url>http://maven.seasar.org/maven2</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>snapshot.maven.seasar.org</id>
			<name>The Seasar Foundation Maven2 Snapshot Repository</name>
			<url>http://maven.seasar.org/maven2-snapshot</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
		<!--                                                                Main Framework -->
		<!--                                                                 = = = = = = = -->
		<!-- dbflute -->
		<dependency>
			<groupId>org.dbflute</groupId>
			<artifactId>dbflute-runtime</artifactId>
			<version>${dbflute.version}</version>
		</dependency>
	    <dependency>
	    	<groupId>org.xerial</groupId>
	    	<artifactId>sqlite-jdbc</artifactId>
	    	<version>${sqlite.jdbc.version}</version>
	    	<scope>runtime</scope>
	    </dependency>

		<!-- guice -->
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>${guice.version}</version>
		</dependency>

		<!-- transaction -->
		<dependency>
			<groupId>com.atomikos</groupId>
			<artifactId>transactions-jdbc</artifactId>
			<version>4.0.4</version>
		</dependency>
		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>javax.transaction-api</artifactId>
			<version>1.2</version>
			<scope>provided</scope>
		</dependency>

		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
			<scope>runtime</scope>
		</dependency>

  		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
		<!--                                                                       Testing -->
		<!--                                                                       = = = = -->
        <dependency>
            <groupId>org.dbflute.utflute</groupId>
            <artifactId>utflute-guice</artifactId>
            <version>${utflute.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
	</dependencies>
</project>